# Muzak

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindPortMidi.cmake
include/Muzak/: Generator.hh  Instrument.hh  Midi.hh  Mixer.hh  Muzak.hh  Node.hh
include/Muzak/gens/: Sine.hh
src/: Generator.cc  Instrument.cc  Midi.cc  Mixer.cc  Muzak.cc  MuzakTest.cc  Node.cc
src/gens/: Sine.cc
